force-app/main/default/objects/Savings_Investment__c/Savings_Investment__c.object-meta.xml
<CustomObject>
    <label>Savings &amp; Investment</label>
    <nameField>
        <displayFormat>SI- {00000000}</displayFormat>
        <label>Savings &amp; Investments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Savings &amp; Investments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>