force-app/main/default/objects/Savings_Investment__c/fields/Initial_investment__c.field-meta.xml
<CustomField>
    <fullName>Initial_investment__c</fullName>
    <label>Initial investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>