force-app/main/default/objects/Savings_Investment__c/fields/Investment_type__c.field-meta.xml
<CustomField>
    <fullName>Investment_type__c</fullName>
    <label>Investment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank account</fullName>
            </value>
            <value>
                <fullName>Bond, Cash</fullName>
            </value>
            <value>
                <fullName>Guaranteed investment cash</fullName>
            </value>
            <value>
                <fullName>ISA</fullName>
            </value>
            <value>
                <fullName>ISA transfer</fullName>
            </value>
            <value>
                <fullName>Shares</fullName>
            </value>
            <value>
                <fullName>Unit trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>