force-app/main/default/objects/Savings_Investment__c/fields/Is_there_any_savings_or_investments_to_a__c.field-meta.xml
<CustomField>
    <fullName>Is_there_any_savings_or_investments_to_a__c</fullName>
    <label>Is there any savings/investments to add?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>