force-app/main/default/objects/Savings_Investment__c/fields/Mortgage_Case__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Case__c</fullName>
    <label>Mortgage Case</label>
    <referenceTo>Mortgage_Case__c</referenceTo>
    <relationshipLabel>Savings &amp; Investments</relationshipLabel>
    <relationshipName>Savings_Investments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>