force-app/main/default/objects/Savings_Investment__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <length>255</length>
    <type>Text</type>
</CustomField>