force-app/main/default/objects/Savings_Investment__c/fields/Owners__c.field-meta.xml
<CustomField>
    <fullName>Owners__c</fullName>
    <label>Owners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>