force-app/main/default/objects/Savings_Investment__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>