force-app/main/default/objects/Savings_Investment__c/fields/Type_of_asset__c.field-meta.xml
<CustomField>
    <fullName>Type_of_asset__c</fullName>
    <label>Type of asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Investments</fullName>
            </value>
            <value>
                <fullName>Other assets</fullName>
            </value>
            <value>
                <fullName>Emergency fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>